[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/gate.gd" id="1_script"]

[sub_resource type="BoxMesh" id="BoxMesh_pillar"]
size = Vector3(0.5, 3, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_center"]
size = Vector3(3, 2, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glow"]
albedo_color = Color(0.2, 0.8, 1, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 1, 1)
emission_energy_multiplier = 2.0

[node name="Gate" type="Area3D"]
script = ExtResource("1_script")

[node name="LeftPillar" type="MeshInstance3D" parent="."]
position = Vector3(-2, 1.5, 0)
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("StandardMaterial3D_glow")

[node name="RightPillar" type="MeshInstance3D" parent="."]
position = Vector3(2, 1.5, 0)
mesh = SubResource("BoxMesh_pillar")
surface_material_override/0 = SubResource("StandardMaterial3D_glow")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
position = Vector3(0, 1, 0)
shape = SubResource("BoxShape3D_center")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
